--- a/index.html
+++ b/index.html
@@ -1,138 +1,141 @@
+
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
-  <title>隨便想想的創作</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>丹尼斯李 | 隨便想想的創作</title>
   <style>
-    * { margin: 0; padding: 0; box-sizing: border-box; }
     body {
-      display: flex;
-      font-family: "微軟正黑體", sans-serif;
-      background-color: #fff8f0;
+      margin: 0;
+      font-family: "Helvetica Neue", sans-serif;
+      background-color: #fff5f0;
       color: #333;
+      background-image: url('302A5B18-701E-4E53-B7C9-7A5EB39FD5CC.png');
+      background-size: cover;
+      background-repeat: no-repeat;
+      background-position: center;
+      background-attachment: fixed;
+      opacity: 0.96;
     }
     nav {
-      width: 220px;
-      background-color: #fcae91;
-      height: 100vh;
-      padding: 20px;
-      position: fixed;
+      background-color: #ff7043;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
     }
-    nav h2 {
-      color: #fff;
-      margin-bottom: 20px;
+    nav h1 {
+      color: white;
+      font-size: 1.5rem;
+      margin: 0;
     }
-    nav a {
-      display: block;
-      margin: 10px 0;
-      color: #fff;
+    nav ul {
+      list-style: none;
+      display: flex;
+      gap: 1.5rem;
+      margin: 0;
+      padding: 0;
+    }
+    nav ul li a {
+      color: white;
       text-decoration: none;
       font-weight: bold;
-    }
-    .content {
-      margin-left: 220px;
-      padding: 20px;
-      flex: 1;
-    }
-    header {
-      background-color: #fcd5ce;
-      padding: 20px 10px;
-      position: relative;
-      text-align: center;
-    }
-    header img {
-      width: 300px;
-      position: absolute;
-      right: 10px;
-      top: 10px;
-    }
-    h1 {
-      color: #e64524;
-      margin: 0;
-      font-size: 32px;
-    }
-    .gif-container {
-      display: none;
-      justify-content: center;
-      gap: 50px;
-      flex-wrap: wrap;
-      margin: 30px 0;
-    }
-    .gif-container img {
-      max-width: 300px;
-      border: 2px solid #f6b092;
-      border-radius: 10px;
-      background: #fff4ea;
-    }
-    .show-btn {
-      display: block;
-      margin: 30px auto;
-      padding: 10px 20px;
-      font-size: 16px;
-      background-color: #e64524;
-      color: #fff;
-      border: none;
-      border-radius: 6px;
       cursor: pointer;
     }
+    header {
+      text-align: center;
+      padding: 4rem 2rem;
+      background: rgba(255, 255, 255, 0.75);
+    }
     section {
-      margin-bottom: 60px;
+      padding: 3rem 2rem;
+      max-width: 960px;
+      margin: auto;
+      display: none;
+      background: rgba(255, 255, 255, 0.8);
+      border-radius: 10px;
+    }
+    section.active {
+      display: block;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      margin: 1rem 0;
     }
     footer {
-      background-color: #fcd5ce;
-      padding: 10px;
-      text-align: right;
-    }
-    footer img {
-      width: 100px;
+      text-align: center;
+      padding: 2rem;
+      background-color: #ffe0b2;
+      color: #555;
     }
   </style>
   <script>
-    function toggleWorks() {
-      const container = document.querySelector('.gif-container');
-      container.style.display = container.style.display === 'flex' ? 'none' : 'flex';
+    function showSection(id) {
+      const sections = document.querySelectorAll('section');
+      sections.forEach(section => section.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
     }
+    window.onload = () => showSection('works');
   </script>
 </head>
 <body>
+
   <nav>
-    <h2>創作目錄</h2>
-    <a href="#works">作品</a>
-    <a href="food.html">食品</a>
-    <a href="lifestyle.html">生活物品</a>
-    <a href="#about">關於我</a>
-    <a href="#contact">聯絡</a>
+    <h1>丹尼斯李</h1>
+    <ul>
+      <li><a onclick="showSection('works')">作品</a></li>
+      <li><a onclick="showSection('animation')">動畫作品</a></li>
+      <li><a onclick="showSection('food')">好吃的東東</a></li>
+      <li><a onclick="showSection('tools')">好用的東東</a></li>
+      <li><a onclick="showSection('about')">關於我與聯絡</a></li>
+    </ul>
   </nav>
 
-  <div class="content">
-    <header>
-      <h1>隨便想想的創作</h1>
-      <img src="header.png" alt="頁首圖片">
-    </header>
+  <header>
+    <h2>隨便想想的創作</h2>
+    <p>歡迎來到我的個人作品集網站</p>
+  </header>
 
-    <section id="works">
-      <h1>動畫作品</h1>
-      <button class="show-btn" onclick="toggleWorks()">點我看作品</button>
-      <div class="gif-container">
-        <img src="archer.gif" alt="作品1">
-        <img src="laughing_oldman.gif" alt="作品2">
-        <img src="work3.gif" alt="作品3">
-      </div>
-    </section>
+  <section id="works">
+    <h3>我的作品</h3>
+    <p>小李子 RPG 貼圖 - 可愛風格的角色素材持續創作中。</p>
+    <img src="placeholder_food.png" alt="作品圖片">
+  </section>
 
-    <section id="about">
-      <h1>關於我</h1>
-      <p style="text-align:center;">你好，我是丹尼斯李，這裡是我隨便想想的創作空間！目前展示的是一些趣味動畫，之後會持續更新更多作品。</p>
-    </section>
+  <section id="animation">
+    <h3>動畫作品</h3>
+    <p>動作展示動畫 - 傳統人物演繹日常與戰鬥動作</p>
+    <img src="placeholder_tools.png" alt="動畫作品1">
+  </section>
 
-    <section id="contact">
-      <h1>聯絡方式</h1>
-      <p style="text-align:center;">Email: your@email.com<br>Instagram: @yourhandle</p>
-    </section>
+  <section id="food">
+    <h3>好吃的東東</h3>
+    <img src="placeholder_food.png" alt="好吃的東東佔位圖">
+    <p>更多美食創作即將登場，敬請期待！</p>
+  </section>
 
-    <footer>
-      <img src="footer.png" alt="頁尾圖片">
-    </footer>
-  </div>
+  <section id="tools">
+    <h3>好用的東東</h3>
+    <img src="placeholder_tools.png" alt="好用的東東佔位圖">
+    <p>生活實用工具陸續開發中，請密切關注！</p>
+  </section>
+
+  <section id="about">
+    <h3>關於我</h3>
+    <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
+    <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
+    <h3>聯絡我</h3>
+    <p>Email: <a href="mailto:dennis3333308@gmail.com">dennis3333308@gmail.com</a></p>
+    <p>Facebook: <a href="https://www.facebook.com/dennis.lee199" target="_blank">點我看 Facebook</a></p>
+    <p>LINE 貼圖：<a href="https://line.me/S/sticker/30662937/?lang=zh-Hant&utm_source=gnsh_stickerDetail" target="_blank">摩尾｜摩塔星上的外星生物（職場篇）</a></p>
+  </section>
+
+  <footer>
+    © 2025 丹尼斯李｜隨便想想的創作
+  </footer>
+
 </body>
 </html>
