--- a/index.html
+++ b/index.html
@@ -9,17 +9,13 @@
     body {
       margin: 0;
       font-family: "Helvetica Neue", sans-serif;
+      background: url('AC794EBB-10E0-4D9E-BB0B-3F2B7A97DA52.png') no-repeat center center fixed;
+      background-size: cover;
       background-color: #fff5f0;
       color: #333;
-      background-image: url('302A5B18-701E-4E53-B7C9-7A5EB39FD5CC.png');
-      background-size: cover;
-      background-repeat: no-repeat;
-      background-position: center;
-      background-attachment: fixed;
-      opacity: 0.96;
     }
     nav {
-      background-color: #ff7043;
+      background-color: rgba(255, 112, 67, 0.9);
       padding: 1rem 2rem;
       display: flex;
       justify-content: space-between;
@@ -54,7 +50,7 @@
       max-width: 960px;
       margin: auto;
       display: none;
-      background: rgba(255, 255, 255, 0.8);
+      background: rgba(255, 255, 255, 0.85);
       border-radius: 10px;
     }
     section.active {
@@ -102,24 +98,25 @@
   <section id="works">
     <h3>我的作品</h3>
     <p>小李子 RPG 貼圖 - 可愛風格的角色素材持續創作中。</p>
-    <img src="placeholder_food.png" alt="作品圖片">
+    <img src="921086B7-71F2-47D2-9637-FA3A1185C7D5.png" alt="作品圖片">
   </section>
 
   <section id="animation">
     <h3>動畫作品</h3>
     <p>動作展示動畫 - 傳統人物演繹日常與戰鬥動作</p>
-    <img src="placeholder_tools.png" alt="動畫作品1">
+    <img src="14CF0AC0-D99A-4D55-BCFD-B9E9E5D12C61.gif" alt="動畫作品1">
+    <img src="E66A2B24-FAFF-41A5-8E77-6C54A847051D.gif" alt="動畫作品2">
   </section>
 
   <section id="food">
     <h3>好吃的東東</h3>
-    <img src="placeholder_food.png" alt="好吃的東東佔位圖">
+    <img src="921086B7-71F2-47D2-9637-FA3A1185C7D5.png" alt="好吃的東東佔位圖">
     <p>更多美食創作即將登場，敬請期待！</p>
   </section>
 
   <section id="tools">
     <h3>好用的東東</h3>
-    <img src="placeholder_tools.png" alt="好用的東東佔位圖">
+    <img src="921086B7-71F2-47D2-9637-FA3A1185C7D5.png" alt="好用的東東佔位圖">
     <p>生活實用工具陸續開發中，請密切關注！</p>
   </section>
 
