--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       margin: 0;
       font-family: "Helvetica Neue", sans-serif;
       background: url('AC794EBB-10E0-4D9E-BB0B-3F2B7A97DA52.png') no-repeat center center fixed;
-      background-size: cover;
+      background-size: contain;
       background-color: #fff5f0;
       color: #333;
     }
