--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <style>
 #about {
-    background-image: url('mnt/data/about_bg_dimmed.png');
+    background-image: url('mnt/data/poster_bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -144,7 +144,52 @@
     <p>Email: <a href="mailto:dennis3333308@gmail.com">dennis3333308@gmail.com</a></p>
     <p>Facebook: <a href="https://www.facebook.com/dennis.lee199" target="_blank">點我看 Facebook</a></p>
     <p>LINE 貼圖：<a href="https://line.me/S/sticker/30662937/?lang=zh-Hant&utm_source=gnsh_stickerDetail" target="_blank">摩尾｜摩塔星上的外星生物（職場篇）</a></p>
-  </section>
+  
+<article class="item">
+    <header>
+        <h3>三人角色歡迎圖</h3>
+    </header>
+    <a href="mnt/data/three_people.png" class="image fit">
+        <img src="mnt/data/three_people.png" alt="三人角色歡迎圖" />
+    </a>
+</article>
+
+<article class="item">
+    <header>
+        <h3>哈哈大笑長者</h3>
+    </header>
+    <a href="mnt/data/laughing_elder.png" class="image fit">
+        <img src="mnt/data/laughing_elder.png" alt="哈哈大笑長者" />
+    </a>
+</article>
+
+<article class="item">
+    <header>
+        <h3>射箭動畫</h3>
+    </header>
+    <a href="mnt/data/archer.gif" class="image fit">
+        <img src="mnt/data/archer.gif" alt="射箭動畫" />
+    </a>
+</article>
+
+<article class="item">
+    <header>
+        <h3>加油長者動畫</h3>
+    </header>
+    <a href="mnt/data/fuel_elder.gif" class="image fit">
+        <img src="mnt/data/fuel_elder.gif" alt="加油長者動畫" />
+    </a>
+</article>
+
+<article class="item">
+    <header>
+        <h3>摩尾誕生於手術台</h3>
+    </header>
+    <a href="mnt/data/mowae_lab.png" class="image fit">
+        <img src="mnt/data/mowae_lab.png" alt="摩尾誕生於手術台" />
+    </a>
+</article>
+</section>
 
   <footer>
     © 2025 丹尼斯李｜隨便想想的創作
@@ -153,10 +198,4 @@
 </body>
 </html>
 
-<!-- 新增作品：摩尾誕生 -->
-<article class="item">
-    <header>
-        <h3>摩尾的誕生</h3>
-    </header>
-    <a href="mnt/data/mowae_creation.png" class="image fit"><img src="mnt/data/mowae_creation.png" alt="摩尾誕生" /></a>
-</article>
+
