--- a/index.html
+++ b/index.html
@@ -92,6 +92,22 @@
     }
 }
 </style>
+
+<style>
+#about {
+    background-image: url('mnt/data/poster_bg.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: white;
+    padding: 4em 2em;
+}
+@media (max-width: 768px) {
+    #about {
+        background-attachment: scroll;
+    }
+}
+</style>
 </head>
 <body>
 
