--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
     <p>生活實用工具陸續開發中，請密切關注！</p>
   </section>
 
-  <section id="about">
+  <section id="about" style="background-image: url(\'mnt/data/poster_bg.png\'); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <h3>關於我</h3>
     <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
     <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
@@ -204,6 +204,31 @@
     <a href="mnt/data/mowae_lab.png" class="image fit">
         <img src="mnt/data/mowae_lab.png" alt="摩尾誕生於手術台" />
     </a>
+</article>
+
+<article class="item">
+    <header><h3>三人角色歡迎圖</h3></header>
+    <a href="mnt/data/three_people.png" class="image fit"><img src="mnt/data/three_people.png" alt="三人角色歡迎圖"></a>
+</article>
+
+<article class="item">
+    <header><h3>哈哈大笑長者</h3></header>
+    <a href="mnt/data/laughing_elder.png" class="image fit"><img src="mnt/data/laughing_elder.png" alt="哈哈大笑長者"></a>
+</article>
+
+<article class="item">
+    <header><h3>射箭動畫</h3></header>
+    <a href="mnt/data/archer.gif" class="image fit"><img src="mnt/data/archer.gif" alt="射箭動畫"></a>
+</article>
+
+<article class="item">
+    <header><h3>加油長者動畫</h3></header>
+    <a href="mnt/data/fuel_elder.gif" class="image fit"><img src="mnt/data/fuel_elder.gif" alt="加油長者動畫"></a>
+</article>
+
+<article class="item">
+    <header><h3>摩尾誕生於手術台</h3></header>
+    <a href="mnt/data/mowae_lab.png" class="image fit"><img src="mnt/data/mowae_lab.png" alt="摩尾誕生於手術台"></a>
 </article>
 </section>
 
