--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 
 <style>
 #about {
-    background-image: url('mnt/data/poster_bg.png');
+    background-image: url('poster_bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -95,7 +95,7 @@
 
 <style>
 #about {
-    background-image: url('mnt/data/poster_bg.png');
+    background-image: url('poster_bg.png');
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
@@ -152,11 +152,11 @@
     <p>生活實用工具陸續開發中，請密切關注！</p>
   </section>
 
-  <section id="about" style="background-image: url(\'mnt/data/poster_bg.png\'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+  <section id="about" style="background-image: url(\'poster_bg.png\'); background-size: cover; background-position: center; background-repeat: no-repeat;">
     <h3>關於我</h3>
     <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
     <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
-    <h3>聯絡我</h3>
+    <h3>有任何想法想告訴我?</h3>
     <p>Email: <a href="mailto:dennis3333308@gmail.com">dennis3333308@gmail.com</a></p>
     <p>Facebook: <a href="https://www.facebook.com/dennis.lee199" target="_blank">點我看 Facebook</a></p>
     <p>LINE 貼圖：<a href="https://line.me/S/sticker/30662937/?lang=zh-Hant&utm_source=gnsh_stickerDetail" target="_blank">摩尾｜摩塔星上的外星生物（職場篇）</a></p>
@@ -165,8 +165,8 @@
     <header>
         <h3>三人角色歡迎圖</h3>
     </header>
-    <a href="mnt/data/three_people.png" class="image fit">
-        <img src="mnt/data/three_people.png" alt="三人角色歡迎圖" />
+    <a href="three_people.png" class="image fit">
+        <img src="three_people.png" alt="三人角色歡迎圖" />
     </a>
 </article>
 
@@ -174,8 +174,8 @@
     <header>
         <h3>哈哈大笑長者</h3>
     </header>
-    <a href="mnt/data/laughing_elder.png" class="image fit">
-        <img src="mnt/data/laughing_elder.png" alt="哈哈大笑長者" />
+    <a href="laughing_elder.png" class="image fit">
+        <img src="laughing_elder.png" alt="哈哈大笑長者" />
     </a>
 </article>
 
@@ -183,8 +183,8 @@
     <header>
         <h3>射箭動畫</h3>
     </header>
-    <a href="mnt/data/archer.gif" class="image fit">
-        <img src="mnt/data/archer.gif" alt="射箭動畫" />
+    <a href="archer.gif" class="image fit">
+        <img src="archer.gif" alt="射箭動畫" />
     </a>
 </article>
 
@@ -192,8 +192,8 @@
     <header>
         <h3>加油長者動畫</h3>
     </header>
-    <a href="mnt/data/fuel_elder.gif" class="image fit">
-        <img src="mnt/data/fuel_elder.gif" alt="加油長者動畫" />
+    <a href="fuel_elder.gif" class="image fit">
+        <img src="fuel_elder.gif" alt="加油長者動畫" />
     </a>
 </article>
 
@@ -201,34 +201,34 @@
     <header>
         <h3>摩尾誕生於手術台</h3>
     </header>
-    <a href="mnt/data/mowae_lab.png" class="image fit">
-        <img src="mnt/data/mowae_lab.png" alt="摩尾誕生於手術台" />
+    <a href="mowae_lab.png" class="image fit">
+        <img src="mowae_lab.png" alt="摩尾誕生於手術台" />
     </a>
 </article>
 
 <article class="item">
     <header><h3>三人角色歡迎圖</h3></header>
-    <a href="mnt/data/three_people.png" class="image fit"><img src="mnt/data/three_people.png" alt="三人角色歡迎圖"></a>
+    <a href="three_people.png" class="image fit"><img src="three_people.png" alt="三人角色歡迎圖"></a>
 </article>
 
 <article class="item">
     <header><h3>哈哈大笑長者</h3></header>
-    <a href="mnt/data/laughing_elder.png" class="image fit"><img src="mnt/data/laughing_elder.png" alt="哈哈大笑長者"></a>
+    <a href="laughing_elder.png" class="image fit"><img src="laughing_elder.png" alt="哈哈大笑長者"></a>
 </article>
 
 <article class="item">
     <header><h3>射箭動畫</h3></header>
-    <a href="mnt/data/archer.gif" class="image fit"><img src="mnt/data/archer.gif" alt="射箭動畫"></a>
+    <a href="archer.gif" class="image fit"><img src="archer.gif" alt="射箭動畫"></a>
 </article>
 
 <article class="item">
     <header><h3>加油長者動畫</h3></header>
-    <a href="mnt/data/fuel_elder.gif" class="image fit"><img src="mnt/data/fuel_elder.gif" alt="加油長者動畫"></a>
+    <a href="fuel_elder.gif" class="image fit"><img src="fuel_elder.gif" alt="加油長者動畫"></a>
 </article>
 
 <article class="item">
     <header><h3>摩尾誕生於手術台</h3></header>
-    <a href="mnt/data/mowae_lab.png" class="image fit"><img src="mnt/data/mowae_lab.png" alt="摩尾誕生於手術台"></a>
+    <a href="mowae_lab.png" class="image fit"><img src="mowae_lab.png" alt="摩尾誕生於手術台"></a>
 </article>
 </section>
 
