--- a/index.html
+++ b/index.html
@@ -163,42 +163,6 @@
   
 <article class="item">
     <header>
-        <h3>三人角色歡迎圖</h3>
-    </header>
-    <a href="three_people.png" class="image fit">
-        <img src="three_people.png" alt="三人角色歡迎圖" />
-    </a>
-</article>
-
-<article class="item">
-    <header>
-        <h3>哈哈大笑長者</h3>
-    </header>
-    <a href="laughing_elder.png" class="image fit">
-        <img src="laughing_elder.png" alt="哈哈大笑長者" />
-    </a>
-</article>
-
-<article class="item">
-    <header>
-        <h3>射箭動畫</h3>
-    </header>
-    <a href="archer.gif" class="image fit">
-        <img src="archer.gif" alt="射箭動畫" />
-    </a>
-</article>
-
-<article class="item">
-    <header>
-        <h3>加油長者動畫</h3>
-    </header>
-    <a href="fuel_elder.gif" class="image fit">
-        <img src="fuel_elder.gif" alt="加油長者動畫" />
-    </a>
-</article>
-
-<article class="item">
-    <header>
         <h3>摩尾誕生於手術台</h3>
     </header>
     <a href="mowae_lab.png" class="image fit">
@@ -206,34 +170,12 @@
     </a>
 </article>
 
-<article class="item">
-    <header><h3>三人角色歡迎圖</h3></header>
-    <a href="three_people.png" class="image fit"><img src="three_people.png" alt="三人角色歡迎圖"></a>
-</article>
 
-<article class="item">
-    <header><h3>哈哈大笑長者</h3></header>
-    <a href="laughing_elder.png" class="image fit"><img src="laughing_elder.png" alt="哈哈大笑長者"></a>
-</article>
 
-<article class="item">
-    <header><h3>射箭動畫</h3></header>
-    <a href="archer.gif" class="image fit"><img src="archer.gif" alt="射箭動畫"></a>
-</article>
-
-<article class="item">
-    <header><h3>加油長者動畫</h3></header>
-    <a href="fuel_elder.gif" class="image fit"><img src="fuel_elder.gif" alt="加油長者動畫"></a>
-</article>
-
-<article class="item">
-    <header><h3>摩尾誕生於手術台</h3></header>
-    <a href="mowae_lab.png" class="image fit"><img src="mowae_lab.png" alt="摩尾誕生於手術台"></a>
-</article>
 </section>
 
   <footer>
-    © 2025 丹尼斯李｜隨便想想的創作
+    © Dennis_Lee 2025 丹尼斯李
   </footer>
 
 </body>
