--- a/index.html
+++ b/index.html
@@ -76,38 +76,6 @@
     }
     window.onload = () => showSection('works');
   </script>
-
-<style>
-#about {
-    background-image: url('poster_bg.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    background-attachment: fixed;
-    color: white;
-}
-@media (max-width: 768px) {
-    #about {
-        background-attachment: scroll;
-    }
-}
-</style>
-
-<style>
-#about {
-    background-image: url('poster_bg.png');
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    color: white;
-    padding: 4em 2em;
-}
-@media (max-width: 768px) {
-    #about {
-        background-attachment: scroll;
-    }
-}
-</style>
 </head>
 <body>
 
@@ -152,7 +120,7 @@
     <p>生活實用工具陸續開發中，請密切關注！</p>
   </section>
 
-  <section id="about" style="background-image: url(\'poster_bg.png\'); background-size: cover; background-position: center; background-repeat: no-repeat;">
+  <section id="about" style="background-image: url('poster_bg.png'); background-size: cover; background-position: center; background-repeat: no-repeat; color: #fff8dc; padding: 4em 2em;">
     <h3>關於我</h3>
     <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
     <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
@@ -160,19 +128,16 @@
     <p>Email: <a href="mailto:dennis3333308@gmail.com">dennis3333308@gmail.com</a></p>
     <p>Facebook: <a href="https://www.facebook.com/dennis.lee199" target="_blank">點我看 Facebook</a></p>
     <p>LINE 貼圖：<a href="https://line.me/S/sticker/30662937/?lang=zh-Hant&utm_source=gnsh_stickerDetail" target="_blank">摩尾｜摩塔星上的外星生物（職場篇）</a></p>
-  
-<article class="item">
-    <header>
-        <h3>摩尾誕生於手術台</h3>
-    </header>
-    <a href="mowae_lab.png" class="image fit">
-        <img src="mowae_lab.png" alt="摩尾誕生於手術台" />
-    </a>
-</article>
 
-
-
-</section>
+    <article class="item">
+      <header>
+          <h3>摩尾誕生於手術台</h3>
+      </header>
+      <a href="mowae_lab.png" class="image fit">
+          <img src="mowae_lab.png" alt="摩尾誕生於手術台" style="width:33%; max-width:100%; height:auto;" />
+      </a>
+    </article>
+  </section>
 
   <footer>
     © Dennis_Lee 2025 丹尼斯李
@@ -180,5 +145,3 @@
 
 </body>
 </html>
-
-
