--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <p>生活實用工具陸續開發中，請密切關注！</p>
   </section>
 
-  <section id="about" style="background-image: url('poster_bg.png'); background-size: cover; background-position: center; background-repeat: no-repeat; color: #fff8dc; padding: 4em 2em;">
+  <section id="about" style="background-image: url('poster_bg.png'); background-size: cover; background-position: center; background-repeat: no-repeat; color: #ff7043; padding: 4em 2em;">
     <h3>關於我</h3>
     <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
     <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
@@ -134,7 +134,7 @@
           <h3>摩尾誕生於手術台</h3>
       </header>
       <a href="mowae_lab.png" class="image fit">
-          <img src="mowae_lab.png" alt="摩尾誕生於手術台" style="width:33%; max-width:100%; height:auto;" />
+          <img src="mowae_lab.png" alt="摩尾誕生於手術台" style="width:25%; max-width:100%; height:auto;" />
       </a>
     </article>
   </section>
