--- a/index.html
+++ b/index.html
@@ -9,8 +9,6 @@
     body {
       margin: 0;
       font-family: "Helvetica Neue", sans-serif;
-      background: url('AC794EBB-10E0-4D9E-BB0B-3F2B7A97DA52.png') no-repeat center center fixed;
-      background-size: contain;
       background-color: #fff5f0;
       color: #333;
     }
@@ -74,7 +72,7 @@
       sections.forEach(section => section.classList.remove('active'));
       document.getElementById(id).classList.add('active');
     }
-    window.onload = () => showSection('works');
+    window.onload = () => showSection('about');
   </script>
 </head>
 <body>
@@ -95,46 +93,21 @@
     <p>歡迎來到我的個人作品集網站</p>
   </header>
 
-  <section id="works">
-    <h3>我的作品</h3>
-    <p>小李子 RPG 貼圖 - 可愛風格的角色素材持續創作中。</p>
-    <img src="921086B7-71F2-47D2-9637-FA3A1185C7D5.png" alt="作品圖片">
-  </section>
-
-  <section id="animation">
-    <h3>動畫作品</h3>
-    <p>動作展示動畫 - 傳統人物演繹日常與戰鬥動作</p>
-    <img src="14CF0AC0-D99A-4D55-BCFD-B9E9E5D12C61.gif" alt="動畫作品1">
-    <img src="E66A2B24-FAFF-41A5-8E77-6C54A847051D.gif" alt="動畫作品2">
-  </section>
-
-  <section id="food">
-    <h3>好吃的東東</h3>
-    <img src="921086B7-71F2-47D2-9637-FA3A1185C7D5.png" alt="好吃的東東佔位圖">
-    <p>更多美食創作即將登場，敬請期待！</p>
-  </section>
-
-  <section id="tools">
-    <h3>好用的東東</h3>
-    <img src="921086B7-71F2-47D2-9637-FA3A1185C7D5.png" alt="好用的東東佔位圖">
-    <p>生活實用工具陸續開發中，請密切關注！</p>
-  </section>
-
-  <section id="about" style="background-image: url('poster_bg.png'); background-size: cover; background-position: center; background-repeat: no-repeat; color: #ff7043; padding: 4em 2em;">
+  <section id="about" style="color: #ff7043;">
     <h3>關於我</h3>
     <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
     <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
-    <h3>有任何想法想告訴我?</h3>
+    <h3>有任何想法想告訴我？</h3>
     <p>Email: <a href="mailto:dennis3333308@gmail.com">dennis3333308@gmail.com</a></p>
     <p>Facebook: <a href="https://www.facebook.com/dennis.lee199" target="_blank">點我看 Facebook</a></p>
     <p>LINE 貼圖：<a href="https://line.me/S/sticker/30662937/?lang=zh-Hant&utm_source=gnsh_stickerDetail" target="_blank">摩尾｜摩塔星上的外星生物（職場篇）</a></p>
 
     <article class="item">
       <header>
-          <h3>摩尾誕生於手術台</h3>
+          <h3 style="color: #ff7043;">摩尾誕生於手術台</h3>
       </header>
-      <a href="mowae_lab.png" class="image fit">
-          <img src="mowae_lab.png" alt="摩尾誕生於手術台" style="width:25%; max-width:100%; height:auto;" />
+      <a href="49271ebc-7947-45f1-92fb-d01e3a3759d0.png" class="image fit">
+          <img src="49271ebc-7947-45f1-92fb-d01e3a3759d0.png" alt="摩尾誕生於手術台" style="width:25%; max-width:100%; height:auto;" />
       </a>
     </article>
   </section>
