--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
     <p>歡迎來到我的個人作品集網站</p>
   </header>
 
-  <section id="about" style="color: #ff7043;">
+  <section id="about" style="color:#ff7043;" style="color: #ff7043;">
     <h3>關於我</h3>
     <p>我叫 Dennis Lee，以前有人叫我小李，但現在可叫我老李。</p>
     <p>我是工科學校畢業，沒有什麼專長，就想嘗試的事情就去嘗試。興趣特多，例如打籃球、游泳、慢跑、爬山等等。</p>
