--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
   <section id="works" class="centered active">
     <h3>我的作品</h3>
     <img src="921086B7-71F2-47D2-9637-FA3A1185C7D5.png" alt="作品圖1" />
-    <img src="8F0FD0B1-CHARACTERS.png" alt="作品圖2" />
+    <img src="AC794EBB-10E0-4D9E-BB0B-3F2B7A97DA52.png" alt="作品圖2" />
   </section>
 
   <section id="animation" class="centered">
@@ -115,6 +115,14 @@
     <p>Email: <a href="mailto:dennis3333308@gmail.com">dennis3333308@gmail.com</a></p>
     <p>Facebook: <a href="https://www.facebook.com/dennis.lee199" target="_blank">點我看 Facebook</a></p>
     <p>LINE 貼圖：<a href="https://line.me/S/sticker/30662937/?lang=zh-Hant&utm_source=gnsh_stickerDetail" target="_blank">摩尾｜摩塔星上的外星生物（職場篇）</a></p>
+    <article class="item">
+    <header>
+    <h3 style="color: #ff7043;">摩尾誕生於手術台</h3>
+    </header>
+    <a class="image fit" href="49271ebc-7947-45f1-92fb-d01e3a3759d0.png">
+    <img alt="摩尾誕生於手術台" src="49271ebc-7947-45f1-92fb-d01e3a3759d0.png" style="width:25%; max-width:100%; height:auto;"/>
+    </a>
+  </article>
   </section>
 
   <footer>
